Put menu links in a "mainMenu" div. That way, they are easier to place (for example, resizing the header won't break the layout, now) Also, change the div(class="tab") to a header element: it is more readable and semantically correct.

--- a/src/style/menu.css
+++ b/src/style/menu.css
@@ -1,15 +1,24 @@
-div.tab{
+header{
 	background: url('../images/background.png');
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     height:55px;
     overflow: visible;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
 }
 
+#mainMenu{
+    display: inline-block;
+    position: relative;
+    bottom: -25px;
+}
 .tablink{
-	margin: 30px 25px 0px 25px;
+    margin: 0 10px;
+	/* margin: 30px 25px 0px 25px; */
 	object-fit: none;
     object-position: 0 0;
     width: 50px;
